[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "0.16"
lettre = "0.10"
dotenv = "0.15.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.38"
anyhow = "1.0.69"
base64 = "0.21.0"
argon2 = { version = "0.4.1", features = ["std"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
fake = "2.5.0"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
claims = "0.7"
serde_json = "1.0.93"
